--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -1,10 +1,12 @@
 <input autocomplete="off" type="search" id="search" placeholder="Search Photos" />
 
-<% @photos.each do |photo| %>
-  <div class="imgcontainer">
-    <%= link_to gallery_show_path(photo["id"]) do %>
-      <%= image_tag(photo['download_url']) %>
-    <% end %>
-    <p><%= photo['author'] %></p>
-  </div>
-<% end %>
+<div id="results">
+  <% @photos.each do |photo| %>
+    <div class="imgcontainer">
+      <%= link_to gallery_show_path(photo["id"]) do %>
+        <%= image_tag(photo['download_url']) %>
+      <% end %>
+      <p><%= photo['author'] %></p>
+    </div>
+  <% end %>
+</div>
